--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   "dependencies": {
     "blueimp-md5": "^1.1.1",
     "normalize.css": "^3.0.3",
-    "react": ">=0.13",
-    "react-router": "^0.13.0",
+    "react": ">=0.14",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "react-tap-event-plugin": "^0.1.3"
   }
 }
