--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "whatwg-fetch": "^0.11.0"
   },
   "dependencies": {
-    "blueimp-md5": "^1.1.1",
+    "lodash.isequal": "^4.1.1",
     "normalize.css": "^3.0.3",
     "react": ">=0.14",
+    "react-addons-update": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
     "react-tap-event-plugin": "^0.1.3"
